# TC-finder

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  checker.cpp  checker.h  main.cpp
test/: brute  brute.cpp  dummysolver  dummysolver.cpp  generate  generate.cpp  solver  solver.cpp
